--- a/estilo/style.css
+++ b/estilo/style.css
@@ -47,6 +47,7 @@ button{
     background: white;
     color: black;
     transition-duration: 0.5s;
+    cursor: pointer;
 }
 button:hover{
     background-color: #8844EE;
